<resources>
    <!-- 登录界面 -->
    <string name="app_name">中文文本标注平台</string>
    <string name="username">用户名</string>
    <string name="password">"  密码   "</string>
    <string name="username_placeholder">账户的用户名</string>
    <string name="password_placeholder">请填写账户的密码</string>
    <string name="login">登录</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="login_wrong">用户名或密码错误</string>
    <string name="login_ok">登录成功</string>
    <string name="login_failed">登录失败，请检查用户名/密码/服务器地址是否正确</string>
    <string name="no_internet">无网络连接</string>
    <string name="login_timeount">登录超时</string>
    <string name="login_ing">登录中...</string>
    <string name="request_timeout">请求超时</string>
    <string name="loading">加载中...</string>

    <!-- 主界面 -->
    <string name="task">任务</string>
    <string name="label">标注</string>
    <string name="check">审核</string>
    <string name="work">工作</string>
    <string name="manage">管理</string>
    <string name="personal">我</string>
    <string name="tabs_height">52dp</string>
    <string name="press_again">1秒内再按一次返回键退出登陆</string>

    <!-- 个人 -->
    <string name="nickname">昵称</string>
    <string name="personal_zone">个人空间</string>

    <!-- 任务 -->
    <string name="refreshing">刷新中...</string>
    <string name="refresh">刷新</string>
    <string name="select_task_set"> </string>
    <string name="get_more">领取更多</string>
    <string name="getting_more">领取中...</string>
    <string name="get_more_ok">领取成功</string>
    <string name="download_task_data_failed">下载样本数据失败</string>

    <!-- 标注 -->
    <string name="confirm">确认</string>
    <string name="revert">撤销</string>
    <string name="save">保存</string>
    <string name="prev_sentence">上一句</string>
    <string name="next_sentence">下一句</string>
    <string name="left_make_left">左扩展</string>
    <string name="left_make_right">左收缩</string>
    <string name="right_make_left">右收缩</string>
    <string name="right_make_right">右扩展</string>
    <string name="remove">移除</string>
    <string name="upload_ok">上传成功</string>
    <string name="upload_failed">上传失败</string>
    <string name="uploading">上传中...</string>

    <!-- 管理 -->
    <string name="smart_label">智能标注 V1.0</string>
    <string name="smart_label_desc">标注大数据管理</string>

    <string name="iterate">迭代</string>
    <string name="iterate_desc">迭代</string>
    <string name="iterating">迭代中</string>
    <string name="entity_list">实体清单</string>
    <string name="iterate_result">迭代结果</string>
    <string name="download_iterate_entities_failed">下载迭代实体清单失败</string>
    <string name="download_iterate_result_failed">下载迭代结果失败</string>
    <string name="plase_select_iterate_entities">请选择要迭代的实体</string>
    <string name="please_wait_for_iterate">请等待上一次迭代完成</string>
    <string name="loading_please_wait">数据正在加载中，请稍后</string>

    <string name="task_manage">任务管理</string>
    <string name="task_manage_desc">查看任务类别，分配人员，完成进度</string>

    <string name="select_result_type">请选择结果类型：</string>
    <string name="select_entity_type">请选择实体类型：</string>

    <string name="select_all">全选</string>
    <string name="unselect_all">全不选</string>
    <string name="search">搜索</string>
    <string name="searching">搜索中</string>
    <string name="search_hint">输入关键词</string>

    <string name="DDL">截止时间</string>
    <string name="DDL2">截止时间：</string>
    <string name="query">查询</string>

    <string name="download_task_info_failed">下载任务信息数据失败</string>
    <string name="finish_rate">完成率</string>
    <string name="finish_rate2">完成率：</string>

    <!-- 文献标注 -->
    <string name="document_search">文献搜索</string>
    <string name="document_label">文献标注</string>
    <string name="press_again_document_return">1秒内再按一次返回键退出文献标注</string>
    <string name="donot_search_empty_content">搜索内容不可以为空</string>
    <string name="resolve_failed">解析失败</string>

</resources>
