<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="end">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_labeled_item_text"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:layout_gravity="center_vertical"
            android:textAlignment="center"
            android:maxWidth="200dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_weight="3"
            android:textAlignment="center"
            android:layout_gravity="bottom"
            android:id="@+id/label_labeled_item_hint"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/left_make_left"
                android:id="@+id/label_labeled_ll_button"
                />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/right_make_right"
                android:id="@+id/label_labeled_rr_button"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/left_make_right"
                android:id="@+id/label_labeled_lr_button"
                />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/right_make_left"
                android:id="@+id/label_labeled_rl_button"
                />



        </LinearLayout>



    </LinearLayout>

</LinearLayout>