<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="30dp">
        <ImageView
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:src="@drawable/logo_tap"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/username"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_placeholder"
            android:singleLine="true"
            android:id="@+id/login_username"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/password"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_placeholder"
            android:singleLine="true"
            android:id="@+id/login_password"
            android:password="true"/>

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login_button"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--            <TextView-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:textStyle="bold"-->
            <!--                android:text="调试选项:"/>-->


            <!--            <TextView-->
            <!--                android:layout_marginLeft="12dp"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="ip"/>-->

            <!--            <EditText-->
            <!--                android:layout_width="120dp"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:singleLine="true"-->
            <!--                android:id="@+id/login_ip"-->
            <!--                android:text="47.52.38.80"/>-->

            <!--            <TextView-->
            <!--                android:layout_marginLeft="12dp"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="端口"/>-->

            <!--            <EditText-->
            <!--                android:layout_width="100dp"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:singleLine="true"-->
            <!--                android:id="@+id/login_port"-->
            <!--                android:text="80"/>-->

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=" mysql服务器" />

            <EditText
                android:id="@+id/mysql_server_addr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="192.168.1.10:5000" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/colorAccent"/>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>