<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_gravity="center_vertical"
            android:text="@string/select_result_type"/>

        <Spinner
            android:layout_marginLeft="16dp"
            android:layout_width="120dp"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:id="@+id/iterate_result_type_spinner"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_gravity="center_vertical"
            android:text="@string/select_entity_type"/>

        <Spinner
            android:layout_marginLeft="16dp"
            android:layout_width="120dp"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:id="@+id/iterate_entity_type_spinner"/>
    </LinearLayout>

    </LinearLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/iterate_operate_button"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"/>



    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.TAP.TAP.NoScrollViewPager
            android:id="@+id/iterate_viewpager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iterate_tabs"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/iterate_tabs"
            android:orientation="horizontal">


                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/iterate_entity_type_check"
                    android:text="@string/entity_list"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="21sp"
                    />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/iterate_iterate_result_check"
                    android:text="@string/iterate_result"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="21sp"
                    />


        </RadioGroup>

    </RelativeLayout>

</LinearLayout>